--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		<li>We can reduce the time taken to run the program and increase the space occupied</li>
-		<li>We can reduce the memory usage of the program and increase it’s total run time</li>
-		<li> We can reduce both time and space complexity by deploying relevant algorithms</li>
+		<li><p>We can reduce the time taken to run the program and increase the space occupied</p></li>
+		<li><p>We can reduce the memory usage of the program and increase it’s total run time</p></li>
+		<li><p> We can reduce both time and space complexity by deploying relevant algorithms</p></li>
 	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
