--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		<li><p>We can reduce the time taken to run the program and increase the space occupied</p></li>
-		<li><p>We can reduce the memory usage of the program and increase it’s total run time</p></li>
+		<li><p>We can optimize a solution using both time and space optimization. To optimize a program</p></li>
+		<li><p>We can reduce the memory usage of the program and increase it\’s total run time</p></li>
 		<li><p> We can reduce both time and space complexity by deploying relevant algorithms</p></li>
 	</ol>
     <script type="text/javascript" src="./script.js">
