--- a/main.html
+++ b/main.html
@@ -8,8 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p>We can optimize a solution using both time and space optimization. To optimize a program</p>
 	<ol>
-		<li><p>We can optimize a solution using both time and space optimization. To optimize a program</p></li>
+		<li>We can reduce the time taken to run the program and increase the space occupied</li>
 		<li><p>We can reduce the memory usage of the program and increase it\’s total run time</p></li>
 		<li><p> We can reduce both time and space complexity by deploying relevant algorithms</p></li>
 	</ol>
